Make sure checkboxes in forms do not overlap

--- a/themes/eldir/style.css
+++ b/themes/eldir/style.css
@@ -844,12 +844,14 @@ div.hosting-queue-frequency select {
   font-size:10px;
   }
 
-/* Radio Buttons in Forms */
-body.aegir #page div.node div.content div.form-radios div.form-item label {
+/* Radio Buttons & Checkboxes in Forms */
+body.aegir #page div.node div.content div.form-radios div.form-item label,
+body.aegir #page div.node div.content div.form-checkboxes div.form-item label {
   width: auto;
 }
 
-body.aegir #page div.node div.content div.form-radios div.form-item {
+body.aegir #page div.node div.content div.form-radios div.form-item,
+body.aegir #page div.node div.content div.form-checkboxes div.form-item {
   border-bottom: none;
   padding-bottom: 1.5em;
 }
